# learn-haskell

./: ArbitraryProduct.hs  Arith2.hs  BullMonoid.hs  Chapter16.hs  Chapter2_Excercise.hs  EqCaseGuard.hs  FirstMonoid.hs  FunctionWithLet.hs  FunctionWithWhere.hs  IdentityCrisis.hs  MasLibs.hs  Monads.hs  Palindrom.hs  Person.hs  ProductTypeArbitrary.hs  QuickCheckMonoid.hs  RegisteredUser2.hs  TopOrLocal.hs  Trivial.hs  UsingQuickCheck.hs  WordNumber.hs  WordNumberTest.hs  account.hs  adhock-polymorphism.hs  artfulDodgy.hs  buildingFunctions.hs  chapter10.hs  chapter11.hs  chapter12.hs  chapter8.hs  chapter9.hs  cipher.hs  daPhone.hs  dataTypes.hs  determenTheType.hs  determineTheType.hs  greetIfCool1.hs  greetIfCool3.hs  h_razor.hs  poemLinse.hs  (+12 more)
hangman/: hangman.cabal
hangman/src/: Main.hs
hello/: hello.cabal  stack.yaml
hello/src/: DogsRule.hs  Hello.hs  Main.hs
morse/: morse.cabal  package.yaml
morse/src/: Main.hs  Morse.hs
